# ros-serial_communicator

./: .gitignore  CMakeLists.txt  README.md  doxyfile  package.xml  serial_communicator.pro
include/: message.h
include/serial_communicator/: communicator.h  message_status.h
include/serial_communicator/utility/: inbound.h  outbound.h
src/: communicator.cpp  inbound.cpp  message.cpp  outbound.cpp
