<?xml version="1.0"?>
<package format="2">

  <name>serial_communicator</name>
  <version>1.0.0</version>
  <description>A ROS serial_communicator for sending and receiving messages with other devices that also running a serial_communicator.</description>
  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@todo.todo">Paul D'Angio</maintainer>

  <url type="website">https://github.com/pcdangio/ros-serial_communicator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>

</package>
